--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ requires-python = ">=3.10"
 dependencies = [
     "requests>=2.31.0",
     "internetarchive>=3.5.0",
+    "pillow>=12.1.0",
+    "playwright>=1.57.0",
 ]
 
 [tool.uv]
-dev-dependencies = []
+dev-dependencies = [
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+]
