--- a/data/wiki_manifest.json
+++ b/data/wiki_manifest.json
@@ -6,15 +6,15 @@
     "desc": "galaxy cruise class eckplans taken from hhvferry",
     "date": "2016-02-18",
     "source": "Wikimedia Commons",
-    "local_path": "img/wiki/wiki_47040388.jpg"
+    "local_path": "wiki/wiki_47040388.jpg"
   },
   {
     "id": "wiki_80554798",
     "title": "North Carolina and Delaware - Profile Showing Method of Strengthening - NARA - 68865606.jpg",
     "url": "https://upload.wikimedia.org/wikipedia/commons/a/af/North_Carolina_and_Delaware_-_Profile_Showing_Method_of_Strengthening_-_NARA_-_68865606.jpg",
     "desc": "Unknown",
-    "date": "1827<div style=\"display: none;\">date QS:P571,+1827-00-00T00:00:00Z/9</div>",
+    "date": "1827date QS:P571,+1827-00-00T00:00:00Z/9",
     "source": "Wikimedia Commons",
-    "local_path": "img/wiki/wiki_80554798.jpg"
+    "local_path": "wiki/wiki_80554798.jpg"
   }
 ]
